Data deprecation statuses